<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="108dp"
        android:layout_marginTop="36dp"
        android:text="@string/lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="323dp"
        android:layout_height="131dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:ignore="RtlCompat">
        <LinearLayout
            android:id="@+id/name_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/tv_name"
                android:text="@string/name"
                android:layout_weight="1"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="InefficientWeight" />
            <EditText
                android:id="@+id/et_name"
                android:hint="@string/input"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="1"
                android:textSize="14sp"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_class"
                android:layout_weight="1"
                android:text="@string/_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/dropdown_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/class_array"
                >
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/hobby"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_hobby"
                android:layout_weight="1"
                android:text="@string/hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="InefficientWeight" />
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_weight="1"
                android:text="@string/_lanqiu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_weight="1"
                android:text="@string/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_weight="1"
                android:text="@string/travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_weight="1"
                android:text="@string/game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/grade"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_grade"
                android:text="@string/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/grade_group"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="InefficientWeight">
                <RadioButton
                    android:id="@+id/radioButton"
                    android:text="@string/you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioButton2"
                    android:text="@string/liang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioButton3"
                    android:text="@string/zhong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioButton4"
                    android:text="@string/ji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioButton5"
                    android:text="@string/cha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/button"
        android:layout_marginEnd="148dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlCompat" />

</android.support.constraint.ConstraintLayout>